[package]
name = "xray"
version = "0.0.1"
authors = ["Kit Ewbank <Kit_Ewbank@hotmail.com>"]
edition = "2018"
description = "AWS X-Ray daemon client for Rust"
license = "MIT"
keywords = ["aws", "x-ray", "tracing", "distributed-tracing"]
readme = "README.md"
homepage = "https://github.com/ewbankkit/xray"
repository = "https://github.com/ewbankkit/xray"

[dependencies]
logger = "0.4"
failure = "0.1"
log = "0.4"
rand = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thread-local-object = "0.1"
lazy_static = "1.2"

[dev-dependencies]
env_logger = "0.6"
