[package]
name = "xray"
version = "0.0.1"
authors = ["Kit Ewbank <Kit_Ewbank@hotmail.com>"]
edition = "2018"
description = "AWS X-Ray daemon client for Rust"
license = "MIT"
keywords = ["aws", "x-ray", "tracing", "distributed-tracing"]
readme = "README.md"
homepage = "https://github.com/ewbankkit/xray"
repository = "https://github.com/ewbankkit/xray"

[dependencies]
log = "0.4.8"
rand = "0.7.3"
serde = "1.0.111"
serde_derive = "1.0.111"
serde_json = "1.0.53"
thiserror = "1.0.19"

[dev-dependencies]
env_logger = "0.7.1"
